--- a/CinemaBook/Scence/Manager/HomeReportManager/view/HomeReportViewController.xib
+++ b/CinemaBook/Scence/Manager/HomeReportManager/view/HomeReportViewController.xib
@@ -1,22 +1,169 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeReportViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeReportViewController" customModule="CinemaBook" customModuleProvider="target">
             <connections>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h1R-gF-b7l">
+                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JpH-cl-ChO">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="66"/>
+                            <subviews>
+                                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Ke-hV-ttA">
+                                    <rect key="frame" x="20" y="10" width="374" height="46"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="lLg-WB-pRs">
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="46"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UXO-4O-244">
+                                                    <rect key="frame" x="0.0" y="0.0" width="187" height="46"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TỔNG QUAN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="frT-K1-gRr">
+                                                            <rect key="frame" x="51.5" y="14.5" width="84.5" height="17"/>
+                                                            <color key="tintColor" red="0.078431372549019607" green="0.38431372549019605" blue="0.69019607843137254" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                                                            <color key="textColor" red="0.078431372549019607" green="0.38431372549019605" blue="0.69019607843137254" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" red="0.8901960784313725" green="0.92549019607843142" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstItem="frT-K1-gRr" firstAttribute="centerY" secondItem="UXO-4O-244" secondAttribute="centerY" id="Evq-OO-aCm"/>
+                                                        <constraint firstItem="frT-K1-gRr" firstAttribute="centerX" secondItem="UXO-4O-244" secondAttribute="centerX" id="aAa-zT-8mH"/>
+                                                    </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                            <real key="value" value="10"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                            <real key="value" value="1"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                            <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </view>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1eX-ta-V3m">
+                                                    <rect key="frame" x="187" y="0.0" width="187" height="46"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BÁO CÁO" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0rM-HE-OZN">
+                                                            <rect key="frame" x="57" y="13" width="73.5" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" red="0.49019607843137253" green="0.49411764705882355" blue="0.50588235294117645" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstItem="0rM-HE-OZN" firstAttribute="centerX" secondItem="1eX-ta-V3m" secondAttribute="centerX" id="72U-bs-ZXM"/>
+                                                        <constraint firstItem="0rM-HE-OZN" firstAttribute="centerY" secondItem="1eX-ta-V3m" secondAttribute="centerY" id="w2Y-jG-De5"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </stackView>
+                                    </subviews>
+                                    <color key="backgroundColor" red="0.94509803921568625" green="0.94901960784313721" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstItem="lLg-WB-pRs" firstAttribute="top" secondItem="4Ke-hV-ttA" secondAttribute="top" id="1Uo-T9-Tk4"/>
+                                        <constraint firstItem="lLg-WB-pRs" firstAttribute="leading" secondItem="4Ke-hV-ttA" secondAttribute="leading" id="SbR-Ky-gxI"/>
+                                        <constraint firstAttribute="trailing" secondItem="lLg-WB-pRs" secondAttribute="trailing" id="jjM-rW-ws8"/>
+                                        <constraint firstAttribute="bottom" secondItem="lLg-WB-pRs" secondAttribute="bottom" id="lET-wV-tdk"/>
+                                    </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                            <real key="value" value="10"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                            <real key="value" value="1"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                            <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                </view>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <constraints>
+                                <constraint firstAttribute="bottom" secondItem="4Ke-hV-ttA" secondAttribute="bottom" constant="10" id="MM5-NI-oZu"/>
+                                <constraint firstAttribute="trailing" secondItem="4Ke-hV-ttA" secondAttribute="trailing" constant="20" id="Vxl-xk-Afd"/>
+                                <constraint firstItem="4Ke-hV-ttA" firstAttribute="top" secondItem="JpH-cl-ChO" secondAttribute="top" constant="10" id="nUX-do-6mf"/>
+                                <constraint firstItem="4Ke-hV-ttA" firstAttribute="leading" secondItem="JpH-cl-ChO" secondAttribute="leading" constant="20" id="woc-5m-dLv"/>
+                                <constraint firstAttribute="height" constant="66" id="x3O-8m-UPe"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RNV-he-S9i">
+                            <rect key="frame" x="0.0" y="67" width="414" height="40"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Xin chào, Nguyen xuan tien dung" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o3h-od-US7">
+                                    <rect key="frame" x="20" y="3.5" width="150" height="33.5"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="150" id="9cc-u3-20G"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <color key="textColor" red="0.41176470588235292" green="0.41568627450980389" blue="0.42352941176470588" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="27/09/2023" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B7P-SU-Isf">
+                                    <rect key="frame" x="317.5" y="11.5" width="76.5" height="17"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <color key="textColor" red="0.41176470588235292" green="0.41568627450980389" blue="0.42352941176470588" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="14:00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f87-WB-Bqt">
+                                    <rect key="frame" x="252" y="11.5" width="63.5" height="17"/>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                    <color key="textColor" red="0.41176470588235292" green="0.41568627450980389" blue="0.42352941176470588" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <constraints>
+                                <constraint firstItem="o3h-od-US7" firstAttribute="centerY" secondItem="RNV-he-S9i" secondAttribute="centerY" id="54V-49-pbe"/>
+                                <constraint firstAttribute="height" constant="40" id="7yP-3D-Dvu"/>
+                                <constraint firstAttribute="trailing" secondItem="B7P-SU-Isf" secondAttribute="trailing" constant="20" id="RtB-BD-6Fd"/>
+                                <constraint firstItem="B7P-SU-Isf" firstAttribute="centerY" secondItem="RNV-he-S9i" secondAttribute="centerY" id="Vfm-dG-6VJ"/>
+                                <constraint firstItem="f87-WB-Bqt" firstAttribute="centerY" secondItem="RNV-he-S9i" secondAttribute="centerY" id="gZF-WJ-gx0"/>
+                                <constraint firstItem="B7P-SU-Isf" firstAttribute="leading" secondItem="f87-WB-Bqt" secondAttribute="trailing" constant="2" id="rT5-8t-hRO"/>
+                                <constraint firstItem="o3h-od-US7" firstAttribute="leading" secondItem="RNV-he-S9i" secondAttribute="leading" constant="20" id="zbT-ar-CNM"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstItem="RNV-he-S9i" firstAttribute="leading" secondItem="h1R-gF-b7l" secondAttribute="leading" id="32A-Pi-CPn"/>
+                        <constraint firstItem="RNV-he-S9i" firstAttribute="top" secondItem="JpH-cl-ChO" secondAttribute="bottom" constant="1" id="9B7-qB-NgL"/>
+                        <constraint firstItem="JpH-cl-ChO" firstAttribute="leading" secondItem="h1R-gF-b7l" secondAttribute="leading" id="9LF-1U-keI"/>
+                        <constraint firstAttribute="trailing" secondItem="JpH-cl-ChO" secondAttribute="trailing" id="CAH-Xb-5oW"/>
+                        <constraint firstItem="JpH-cl-ChO" firstAttribute="top" secondItem="h1R-gF-b7l" secondAttribute="top" id="Ulh-fP-YpS"/>
+                        <constraint firstAttribute="trailing" secondItem="RNV-he-S9i" secondAttribute="trailing" id="Xuu-pI-4gQ"/>
+                    </constraints>
+                </view>
+            </subviews>
+            <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="h1R-gF-b7l" secondAttribute="trailing" id="I04-hY-H5a"/>
+                <constraint firstItem="h1R-gF-b7l" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="IUc-FM-Qh6"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="h1R-gF-b7l" secondAttribute="bottom" id="dga-qY-9lS"/>
+                <constraint firstItem="h1R-gF-b7l" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="kYh-fO-zs0"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="132" y="87"/>
         </view>
     </objects>
 </document>
