--- a/CinemaBook/Scence/NewFeed/view/cell/VideoItemShowinnewfeedTableViewCell.xib
+++ b/CinemaBook/Scence/NewFeed/view/cell/VideoItemShowinnewfeedTableViewCell.xib
@@ -19,28 +19,31 @@
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rsi-4G-LAH" customClass="YTPlayerView">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="270"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="270" id="kvP-NA-VZf"/>
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kt3-Ba-OVh">
-                        <rect key="frame" x="0.0" y="270" width="320" height="30"/>
+                        <rect key="frame" x="0.0" y="270" width="320" height="22"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="kt3-Ba-OVh" secondAttribute="trailing" id="6AJ-UJ-COf"/>
                     <constraint firstItem="Rsi-4G-LAH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="BYQ-cp-57D"/>
                     <constraint firstItem="kt3-Ba-OVh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Km2-wx-IaT"/>
                     <constraint firstAttribute="trailing" secondItem="Rsi-4G-LAH" secondAttribute="trailing" id="Vt0-m9-KOJ"/>
                     <constraint firstItem="kt3-Ba-OVh" firstAttribute="top" secondItem="Rsi-4G-LAH" secondAttribute="bottom" id="cWX-b1-2kF"/>
-                    <constraint firstAttribute="bottom" secondItem="kt3-Ba-OVh" secondAttribute="bottom" id="cmd-Me-7jU"/>
+                    <constraint firstAttribute="bottom" secondItem="kt3-Ba-OVh" secondAttribute="bottom" constant="8" id="cmd-Me-7jU"/>
                     <constraint firstItem="Rsi-4G-LAH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="wXl-hp-VZJ"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="lbl_namemovie" destination="kt3-Ba-OVh" id="6Ac-m3-T5Y"/>
