--- a/CinemaBook/Scence/Manager/Management/ManagementEmployee/view/ManagementEmployeeViewController.xib
+++ b/CinemaBook/Scence/Manager/Management/ManagementEmployee/view/ManagementEmployeeViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ManagementEmployeeViewController" customModule="CinemaBook" customModuleProvider="target">
             <connections>
+                <outlet property="tableView" destination="Rue-on-HV8" id="Rrb-e3-4Y2"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -22,50 +23,89 @@
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8yx-y0-1Hh">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="40"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-back-blue" translatesAutoresizingMaskIntoConstraints="NO" id="Hbv-Ag-2Ec">
-                                    <rect key="frame" x="20" y="9" width="22" height="22"/>
+                                    <rect key="frame" x="20" y="14" width="22" height="22"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="22" id="u93-iI-xkc"/>
                                         <constraint firstAttribute="height" constant="22" id="wU0-sY-IZb"/>
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="QUẢN LÝ NHÂN VIÊN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pAK-Cd-OhK">
-                                    <rect key="frame" x="124.5" y="9.5" width="165" height="21"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <rect key="frame" x="116" y="14.5" width="182" height="21"/>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                     <color key="textColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-plus" translatesAutoresizingMaskIntoConstraints="NO" id="e6d-jD-AG9">
+                                    <rect key="frame" x="372" y="14" width="22" height="22"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="22" id="6BB-v2-56f"/>
+                                        <constraint firstAttribute="width" constant="22" id="Hux-od-CMw"/>
+                                    </constraints>
+                                </imageView>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nzL-gS-kaY">
+                                    <rect key="frame" x="364" y="0.0" width="50" height="50"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="50" id="vLJ-lb-l04"/>
+                                    </constraints>
+                                    <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <state key="normal" title="Button"/>
+                                    <connections>
+                                        <action selector="btn_makeToAccountinfoViewController:" destination="-1" eventType="touchUpInside" id="E6w-bV-7C4"/>
+                                    </connections>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4ry-qx-6oK">
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="50" id="5DF-9E-TEt"/>
+                                    </constraints>
+                                    <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <state key="normal" title="Button"/>
+                                    <connections>
+                                        <action selector="btn_makePopToViewController:" destination="-1" eventType="touchUpInside" id="rvK-zV-Qe1"/>
+                                    </connections>
+                                </button>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             <constraints>
+                                <constraint firstAttribute="bottom" secondItem="nzL-gS-kaY" secondAttribute="bottom" id="3eR-mB-Rzz"/>
                                 <constraint firstItem="pAK-Cd-OhK" firstAttribute="centerY" secondItem="8yx-y0-1Hh" secondAttribute="centerY" id="6Y6-Xn-K4l"/>
                                 <constraint firstItem="pAK-Cd-OhK" firstAttribute="centerX" secondItem="8yx-y0-1Hh" secondAttribute="centerX" id="JI6-VV-kQg"/>
+                                <constraint firstItem="nzL-gS-kaY" firstAttribute="top" secondItem="8yx-y0-1Hh" secondAttribute="top" id="L96-UD-qrD"/>
+                                <constraint firstItem="4ry-qx-6oK" firstAttribute="leading" secondItem="8yx-y0-1Hh" secondAttribute="leading" id="OvQ-Mr-gZF"/>
                                 <constraint firstItem="Hbv-Ag-2Ec" firstAttribute="leading" secondItem="8yx-y0-1Hh" secondAttribute="leading" constant="20" id="Pfz-KS-Bzw"/>
+                                <constraint firstItem="e6d-jD-AG9" firstAttribute="centerY" secondItem="8yx-y0-1Hh" secondAttribute="centerY" id="VXt-HV-nbH"/>
                                 <constraint firstItem="Hbv-Ag-2Ec" firstAttribute="centerY" secondItem="8yx-y0-1Hh" secondAttribute="centerY" id="YgP-Jo-fHl"/>
+                                <constraint firstItem="4ry-qx-6oK" firstAttribute="top" secondItem="8yx-y0-1Hh" secondAttribute="top" id="cMj-wP-IK6"/>
+                                <constraint firstAttribute="bottom" secondItem="4ry-qx-6oK" secondAttribute="bottom" id="clZ-jD-1U0"/>
+                                <constraint firstAttribute="trailing" secondItem="nzL-gS-kaY" secondAttribute="trailing" id="feD-an-lCW"/>
+                                <constraint firstAttribute="trailing" secondItem="e6d-jD-AG9" secondAttribute="trailing" constant="20" id="zpM-48-rDp"/>
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JXO-9k-AsU">
-                            <rect key="frame" x="0.0" y="40" width="414" height="60"/>
+                            <rect key="frame" x="0.0" y="50" width="414" height="50"/>
                             <subviews>
                                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="blG-g3-bw0">
-                                    <rect key="frame" x="20" y="10" width="374" height="40"/>
+                                    <rect key="frame" x="20" y="10" width="374" height="30"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-search" translatesAutoresizingMaskIntoConstraints="NO" id="ODm-BV-uGO">
-                                            <rect key="frame" x="8" y="5" width="30" height="30"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-search-2" translatesAutoresizingMaskIntoConstraints="NO" id="ODm-BV-uGO">
+                                            <rect key="frame" x="8" y="5" width="20" height="20"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="30" id="Phm-3b-SPn"/>
-                                                <constraint firstAttribute="width" constant="30" id="bCp-4o-fqU"/>
+                                                <constraint firstAttribute="height" constant="20" id="Phm-3b-SPn"/>
+                                                <constraint firstAttribute="width" constant="20" id="bCp-4o-fqU"/>
                                             </constraints>
                                         </imageView>
-                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CRN-gB-gus">
-                                            <rect key="frame" x="38" y="0.0" width="336" height="40"/>
+                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Tìm kiếm" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CRN-gB-gus">
+                                            <rect key="frame" x="28" y="0.0" width="346" height="30"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits"/>
                                         </textField>
                                     </subviews>
-                                    <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="backgroundColor" red="0.94509803921568625" green="0.94901960784313721" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstItem="ODm-BV-uGO" firstAttribute="leading" secondItem="blG-g3-bw0" secondAttribute="leading" constant="8" id="6Pd-cV-ZEK"/>
                                         <constraint firstAttribute="trailing" secondItem="CRN-gB-gus" secondAttribute="trailing" id="E7F-Xj-d6Y"/>
@@ -76,7 +116,7 @@
                                     </constraints>
                                     <userDefinedRuntimeAttributes>
                                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                            <real key="value" value="20"/>
+                                            <real key="value" value="15"/>
                                         </userDefinedRuntimeAttribute>
                                         <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                                             <real key="value" value="1"/>
@@ -92,7 +132,7 @@
                                 <constraint firstItem="blG-g3-bw0" firstAttribute="top" secondItem="JXO-9k-AsU" secondAttribute="top" constant="10" id="6x5-L7-xhA"/>
                                 <constraint firstItem="blG-g3-bw0" firstAttribute="leading" secondItem="JXO-9k-AsU" secondAttribute="leading" constant="20" id="DfK-ME-M2t"/>
                                 <constraint firstAttribute="trailing" secondItem="blG-g3-bw0" secondAttribute="trailing" constant="20" id="YiI-Ak-w1J"/>
-                                <constraint firstAttribute="height" constant="60" id="cKR-id-Tv5"/>
+                                <constraint firstAttribute="height" constant="50" id="cKR-id-Tv5"/>
                                 <constraint firstAttribute="bottom" secondItem="blG-g3-bw0" secondAttribute="bottom" constant="10" id="g9f-8W-pvZ"/>
                             </constraints>
                         </view>
@@ -133,6 +173,7 @@
     </objects>
     <resources>
         <image name="icon-back-blue" width="9" height="18"/>
-        <image name="icon-search" width="22" height="22"/>
+        <image name="icon-plus" width="30" height="30"/>
+        <image name="icon-search-2" width="18" height="18"/>
     </resources>
 </document>
